# s21_3DViewer_v1

./: README.md
src/3D_Viewer/: CMakeLists.txt  display.cpp  display.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/3D_Viewer/gifimage/: qgifimage.cpp
